--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-i18next": "^11.17.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.0.1",
     "save": "^2.5.0",
     "save-dev": "^0.0.1-security",
     "web-vitals": "^1.1.1"
